Suppress unsafe warning for the CEL verifier.